--- a/Story/story.html
+++ b/Story/story.html
@@ -2,9 +2,40 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="css/story.css">
         <title>Story</title>
     </head>
+    <nav>
+        <div id="head1">
+        <img src="img/icon2.jpeg" alt="icon">
+            <a href="../index.html">
+                <h4>
+                    SFPA
+                </h4>
+            </a>
+        </div>    
+        <div id="head2">
+            <a href="story.html"> 
+                <h6>
+                    Story
+                </h6>
+            </a>
+            <a href="../event/event.html">
+                <h6>
+                    Event
+                </h6>
+            </a>
+            <a href="../booth/booth.html">
+                <h6>
+                    Booth
+                </h6>
+            </a>
+        </div>
+        </nav>
     <body>
         
+        <div id="block">
+            <img src="img/poor.jpeg" alt="poor dog">
+        </div>
     </body>
 </html>
