--- a/booth/booth.html
+++ b/booth/booth.html
@@ -2,15 +2,38 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="css/booth.css">
         <title>Booth</title>
     </head>
-    <header>
-        <h4><a href="../index.html">SFPA</a></h4>
-        <h6><a href="../Story/index.html">Story</h6>
-        <h6><a href="../event/index.html">Game</h6>
-        <h6><a href="index.html">Booth</h6>
-    </header>
+    <nav>
+        <div id="head1">
+        <img src="img/icon2.jpeg" alt="icon">
+            <a href="../index.html">
+                <h4>
+                    SFPA
+                </h4>
+            </a>
+        </div>    
+        <div id="head2">
+            <a href="../Story/story.html"> 
+                <h6>
+                    Story
+                </h6>
+            </a>
+            <a href="../event/event.html">
+                <h6>
+                    Event
+                </h6>
+            </a>
+            <a href="booth.html">
+                <h6>
+                    Booth
+                </h6>
+            </a>
+        </div>
+        </nav>
     <body>
-       
+      
+
     </body>
 </html>
