--- a/index.html
+++ b/index.html
@@ -2,9 +2,43 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="css/main.css">
         <title>template document</title>
-    </head>
-    <body>
         
+    </head>
+    <nav>
+        <div id="head1">
+        <img src="img/icon2.jpeg" alt="icon">
+            <a href="index.html">
+                <h4>
+                    SFPA
+                </h4>
+            </a>
+        </div>    
+        <div id="head2">
+            <a href="Story/story.html"> 
+                <h6>
+                    Story
+                </h6>
+            </a>
+            <a href="event/event.html">
+                <h6>
+                    Event
+                </h6>
+            </a>
+            <a href="booth/booth.html">
+                <h6>
+                    Booth
+                </h6>
+            </a>
+        </div>
+        </nav>
+    <body>
+        <div id="dog">
+            <img src="img/love.png" alt="lovely doggy"> 
+        </div>
+        <div id="block">
+            <p>ijbjutuci</p>
+           </div>
     </body>
 </html>
