--- a/event/event.html
+++ b/event/event.html
@@ -2,8 +2,36 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="css/event.css">
         <title>Event</title>
     </head>
+    <nav>
+        <div id="head1">
+        <img src="img/icon2.jpeg" alt="icon">
+            <a href="../index.html">
+                <h4>
+                    SFPA
+                </h4>
+            </a>
+        </div>    
+        <div id="head2">
+            <a href="../Story/story.html"> 
+                <h6>
+                    Story
+                </h6>
+            </a>
+            <a href="event.html">
+                <h6>
+                    Event
+                </h6>
+            </a>
+            <a href="../booth/booth.html">
+                <h6>
+                    Booth
+                </h6>
+            </a>
+        </div>
+        </nav>
     <body>
        
     </body>
