--- a/event2/event2.html
+++ b/event2/event2.html
@@ -25,13 +25,13 @@
                     <div class="dropdown">
                         <button class="dropbtn">Event</button>
                         <div class="dropdown-content">
-                          <a href="event.html">Play</a>
-                          <a href="/event1/event1.html">Picnic</a>
-                          <a href="/event2/event2.html">Movie night</a>
+                          <a href="/event/event.html">Play</a>
+                          <a href="../event1/event1.html">Picnic</a>
+                          <a href="event2.html">Movie night</a>
                         </div>
                       </div>
                 </h6>
-            
+            </a>
             <a href="../booth/booth.html">
                 <h6>
                     Booth
@@ -41,23 +41,23 @@
         </nav>
     <body>
         <div id="block">
-            <img src="img/play.jpeg" alt="Dog plays with kid">
+            <img src="img/movie.jpeg" alt="Watch Movie">
             <div class="part1">
                 <div class="words1">
                   <p>
-                      Playing Sessions
+                      Movie Night
                   </p>
                 </div> 
                  <div class="words2">
                    <p>
-                    Date: 12/7
+                    Date: 12/9
                    </p>
                 </div>
             </div>
             <div class="part2">
                <div class="words3">
                   <p>
-                      Disc throwing & Wand chase
+                      Movie night with pets
                   </p>
                </div>
                 <div class="words4">
@@ -66,15 +66,8 @@
                    </p>
                </div>
             </div>
-        <div class="animation">
-            <div id="ball">
-            <img src="img/ball.png">
-            </div>
-            <div id ="dog">
-            <img src="img/dogrun.gif">
-            </div>
-        </div>
         
+        </div>
         </div>
     </body>
 </html>
