--- a/index.html
+++ b/index.html
@@ -21,11 +21,18 @@
                     Story
                 </h6>
             </a>
-            <a href="event/event.html">
+            
                 <h6>
-                    Event
+                    <div class="dropdown">
+                        <button class="dropbtn">Event</button>
+                        <div class="dropdown-content">
+                          <a href="event/event.html">Play</a>
+                          <a href="event1/event1.html">Picnic</a>
+                          <a href="event2/event2.html">Movie night</a>
+                        </div>
+                      </div>
                 </h6>
-            </a>
+            
             <a href="booth/booth.html">
                 <h6>
                     Booth
@@ -38,7 +45,11 @@
             <img src="img/love.png" alt="lovely doggy"> 
         </div>
         <div id="block">
-            <p>ijbjutuci</p>
+            <p>
+                San Francisco Pet Adoption is a event dedicated to raised public awareness on pet adaption.
+                In this event, participants would have a chance to interact with dogs and cats from our sheltor.
+                We would also have pet adaption at the third day and booth selling souverniurs that would finance our sheltor and provide better environment to our animals.
+            </p>
            </div>
     </body>
 </html>
