--- a/event/event.html
+++ b/event/event.html
@@ -26,8 +26,8 @@
                         <button class="dropbtn">Event</button>
                         <div class="dropdown-content">
                           <a href="event.html">Play</a>
-                          <a href="/event1/event1.html">Picnic</a>
-                          <a href="/event2/event2.html">Movie night</a>
+                          <a href="../event1/event1.html">Picnic</a>
+                          <a href="../event2/event2.html">Movie night</a>
                         </div>
                       </div>
                 </h6>
