--- a/event2/event2.html
+++ b/event2/event2.html
@@ -25,7 +25,7 @@
                     <div class="dropdown">
                         <button class="dropbtn">Event</button>
                         <div class="dropdown-content">
-                          <a href="/event/event.html">Play</a>
+                          <a href="../event/event.html">Play</a>
                           <a href="../event1/event1.html">Picnic</a>
                           <a href="event2.html">Movie night</a>
                         </div>
